--- a/docs/1. Projeto/P2. Projeto físico.md
+++ b/docs/1. Projeto/P2. Projeto físico.md
@@ -1,4 +1,4 @@
 # TODO
 
-- Infra PostgreSQL está funcionando após tuning coerente com P1.
-- Projeto físico é correto e incorpora coerentemente com as constraints estabelecidas no P1.
+- Infra PostgreSQL está funcionando após tuning coerente com P1. OK
+- Projeto físico é correto e incorpora coerentemente com as constraints estabelecidas no P1. OK
